--- a/web-server/package.json
+++ b/web-server/package.json
@@ -6,9 +6,9 @@
   },
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
