--- a/.github/workflows/main_higutakamock.yml
+++ b/.github/workflows/main_higutakamock.yml
@@ -19,4 +19,4 @@ jobs:
       with:
         app-name: 'higutakaMock'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_HIGUTAKAMOCK }}
-        package: .
+        package: web-server
