--- a/.github/workflows/main_higutakamock.yml
+++ b/.github/workflows/main_higutakamock.yml
@@ -9,6 +9,20 @@ on:
       - main
 
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      - name: Create release build
+        run: |
+          npm install
+          npm run build
   deploy:
     runs-on: ubuntu-latest
     steps:
