--- a/.github/workflows/main_higutakamock.yml
+++ b/.github/workflows/main_higutakamock.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           npm install
           npm run build
+        working-directory: ./web-server
   deploy:
     runs-on: ubuntu-latest
     steps:
