--- a/web-server/package.json
+++ b/web-server/package.json
@@ -9,6 +9,7 @@
   "main": "server.js",
   "scripts": {
     "start": "server.js",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
