--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "web-server",
+  "name": "src",
   "engines": {
     "node": "18.20.4",
     "npm": "10.7.0"
   },
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "server.js",
+    "start": "index.js",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
