package.jsonの場所に移動するコマンド追加

--- a/.github/workflows/main_higutakamock.yml
+++ b/.github/workflows/main_higutakamock.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+      - run: cd ./src
       - run: npm install --if-present
       - run: npm run build
   deploy:
