index.jsからapp.jsに変更

--- a/src/package.json
+++ b/src/package.json
@@ -6,9 +6,9 @@
   },
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "index.js",
+    "start": "app.js",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
